kubernetes/apps/choochoo/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: choochoo
spec:
  selector:
    app: choochoo
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
