kubernetes/apps/choochoo/ingress-route.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: tiny-coffee
spec:
  routes:
    - kind: Rule
      match: Host(`train.reb.gg`)
      services:
        - name: tiny-coffee
          port: 80
